--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <script src="http://code.createjs.com/easeljs-0.8.1.min.js"></script>
+    <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
     <script src="js/main.js"></script>
+
+
+	<style type="text/css">
+		/* Remove margins and HTML scrollbars */
+		body, html  {
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+		}
+	</style>
+
 </head>
 <body onload="init();">
     <canvas id="demoCanvas" width="500" height="300">
