--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
+    <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+	
+	<script src="js/jquery.min.js"></script>
     <script src="http://code.createjs.com/easeljs-0.8.1.min.js"></script>
     <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
     <script src="js/main.js"></script>
+
 
 
 	<style type="text/css">
