--- a/application/client/index.html
+++ b/application/client/index.html
@@ -10,8 +10,9 @@
     <script src="http://code.createjs.com/easeljs-0.8.2.min.js"></script>
     <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="utils.js"></script>
     <script src="main.js"></script>
+
+    <title>Journey of Heroes</title>
 
 	<style type="text/css">
 
